updated scss file variable

--- a/OracleJETApplication/scss/oj/v1.1.2/alta/_oj.alta.variables.scss
+++ b/OracleJETApplication/scss/oj/v1.1.2/alta/_oj.alta.variables.scss
@@ -109,7 +109,8 @@ $interaction6Color: #dae9f5 !default;
 $background1Color: #ffffff !default;
 $background2Color: #f9f9f9 !default;
 $background3Color: #fcfdfe !default;
-$background4Color: #f0f0f0 !default; 
+/*$background4Color: #f0f0f0 !default; */
+$background4Color: #0c4a7e !default;
 $background5Color: #fafafa !default;
 $background6Color: #e4e8ea !default;
 
