--- a/OracleJETApplication/templates/header.tmpl.html
+++ b/OracleJETApplication/templates/header.tmpl.html
@@ -1,8 +1,8 @@
-<div class="demo-appheader">
+<div class="appheader">
     <div class="oj-row demo-appheader-classic">
         <div class="demo-grid-display demo-appheader-col">
             <div class="oj-row">
-                <div class="oj-md-1 oj-lg-only-hide oj-xl-hide demo-off-canvas-toggle demo-appheader-toggle-button left">
+                <div id="leftOffButton" class="oj-md-1 oj-lg-only-hide oj-xl-hide demo-off-canvas-toggle demo-appheader-toggle-button left">
                     <button class='oj-button-half-chrome demo-appheader-toggle-button'
                             data-bind="click:toggleAppDrawer,
 			     ojComponent: {component:'ojButton',
@@ -28,10 +28,11 @@
                 </div>
             </div>
             <div class="oj-row">
-                <div class="oj-sm-only-hide oj-md-only-hide oj-lg-4 oj-xl-4 left">
-                    <div role="img" class="oj-icon appheader-logo-oracle" title="Oracle Logo" alt="Oracle Logo"><span style="" class="oj-lg-10 oj-xl-10 demo-appheader-appname" data-bind="text: appName"></span></div>
+                <div class="oj-sm-only-hide oj-md-only-hide oj-lg-4 oj-xl-5 left">
+                    <div role="img" class="oj-icon appheader-logo-oracle left" title="Oracle Logo" alt="Oracle Logo"></div>
+                    <div style="" class="appheader-appname left" data-bind="text: appName"></div>
                 </div>
-                <div class="oj-sm-12 oj-med-12 oj-lg-4 oj-xl-4 left">
+                <div class="oj-sm-12 oj-med-12 oj-lg-5 oj-xl-4 left">
                     <div id="ojAppNav2" class="demo-appheader-nav oj-lg-justify-content-center oj-xl-justify-content-flex-end" 
                          data-bind="ojComponent: {component: 'ojNavigationList', 
                               drillMode: 'none', 
@@ -43,7 +44,7 @@
                               }" aria-label="Choose only one navigation element">
                     </div>
                 </div>
-                <div class="oj-sm-only-hide oj-md-only-hide oj-lg-4 oj-xl-4 oj-helper-text-align-right right">
+                <div class="oj-sm-only-hide oj-md-only-hide oj-lg-3 oj-xl-3 oj-helper-text-align-right right">
                     <div id='demoAppheaderMenuAndToolbarContainer' class="demo-appheader-menuandtoolbar-container">
                         <div class="demo-appheader-toolbar-container">
                                 
@@ -59,12 +60,7 @@
                                 </div>
                             <div class="demo-appheader-toolbar oj-toolbar-no-chrome" aria-controls="player" data-bind="ojComponent: {component:'ojToolbar'}">
 
-                                <!-- ko foreach: toolbarButtons -->
-                                <button class='oj-button-half-chrome demo-appheader-toolbar-button'
-                                        data-bind="
-                                     ojComponent: {component:'ojButton', label: label, display: 'icons', icons: {start: iconClass}} ">
-                                </button>
-                                <!-- /ko -->
+
 
                                 <!-- This is how to add a separator to the toolbar.  
                                      Be sure to include the role and aria-orientation as shown to make it accessible.  -->
@@ -90,7 +86,8 @@
     <li>
         <a href="#">
             <span data-bind="css: $data['iconClass']"></span>
-            <!-- ko text: $data['name'] --> <!--/ko-->
+            <span data-bind="text: $data['name']"></span>
+   
         </a>
     </li>    
 </script>
