updated override scss please compile the new override

--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -112,6 +112,7 @@ $background4Color: #0c4a7e;
 // $background5Color: #fafafa;
 // $background6Color: #e4e8ea;
 $background7Color: #0572CE;
+$background8Color: #333333;
 // 
 // border colors
 // ---------------------------------
@@ -363,6 +364,7 @@ $headerBgColor:         $background4Color;
 $headerNavColorSelected: $background7Color;
 $headerNavHoverBorder: $borderHoverBottom;
 $headerLogoText: $logoText;
+$headerOffCanvas: $background8Color;
 // $headerBgColorDisabled: $background5Color; 
 // $headerBgImage:         null;
 $headerBGLogo: $imageDir + 'oracle-logo.png';
@@ -1341,6 +1343,9 @@ $headerUserIcon: $imageDir + 'vatar_24px.png';
     margin-top: 9px;
     width: 140px;
 }
+.oj-offcanvas-open{
+    background-color:$headerOffCanvas;
+}
 .appheader-appname{
     color: $headerLogoText;
     display: block;
@@ -1409,11 +1414,26 @@ li {
     #ui-id-2 > li > .oj-navigationlist-item-content > span.oj-navigationlist-item-label{
         display:none;
     }
+    #ui-id-1 > li {
+        border-bottom: 1px solid #585959;
+    }
+    //Min Height
+    div#mainCol {
+        min-height: 627px;
+    }
+    
 }
 // MD IPad
 @media only screen and (min-width: 768px) and (max-width: 1023px) and (-webkit-min-device-pixel-ratio: 1) {
     #leftOffButton{
         width: 4.33333%;
+    }
+    #ui-id-12 > li {
+        border-bottom: 1px solid #cccccc;
+    }
+    //Min Height
+    div#mainCol {
+        min-height: 800px;
     }
 }
 // LG Desktop
@@ -1429,6 +1449,10 @@ li {
         margin-top: 17px;
         margin-left: 5px;
         font-size: .875rem;
+    }
+    //Min Height
+    div#mainCol {
+        min-height: 800px;
     }
     //Icon padding Right to Text
     html:not([dir="rtl"]) .oj-navigationlist-horizontal:not(.oj-navigationlist-stack-icon-label):not(.oj-navigationlist-icon-only) .oj-navigationlist-item-icon{
