--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -1,4 +1,4 @@
-<div class="oj-row">
+<div class="oj-row" id="test">
     <div class="oj-sm-only-hide oj-md-only-hide oj-lg-2 oj-xl-2 left">
         <div id='sideNavigationContainer'>
             <div class="row" id="login---row">
@@ -32,27 +32,27 @@
                               <!-- tab bar -->
                               <ul>
                                   <!-- ko foreach: dataTabSource -->
-                                  <li data-bind="attr: {id: name}"><a data-bind='click: $parent.selectedTab'><span data-bind="text:name"></a></span></li>
+                                  <li data-bind="attr: {id: name}"><a class="alert" data-bind='click: $parent.selectedTab'><span data-bind="text:name"></a></span></li>
                                   <!-- /ko -->
                               </ul>
                                <!-- tab contents -->
                               <div id="tabs-1">
-                                    <div data-bind="template: { name: 'generic_template'}"></div>
+                                    <div data-bind="template: { name: 'tab-overview'}"></div>
                               </div>
                               <div id="tabs-2">
-                                    <div data-bind="template: { name: 'generic_template'}"></div>
+                                    <div data-bind="template: { name: 'tab-content-2'}"></div>
                               </div>
                               <div id="tabs-3">
-                                    <div data-bind="template: { name: 'generic_template'}"></div>
+                                    <div data-bind="template: { name: 'tab-content-3'}"></div>
                               </div>
                               <div id="tabs-4">
-                                    <div data-bind="template: { name: 'generic_template'}"></div>
+                                    <div data-bind="template: { name: 'tab-content-4'}"></div>
                               </div>
                               <div id="tabs-5">
-                                    <div data-bind="template: { name: 'generic_template'}"></div>
+                                    <div data-bind="template: { name: 'tab-content-5'}"></div>
                               </div>
                               <div id="tabs-6">
-                                    <div data-bind="template: { name: 'generic_template'}"></div>
+                                    <div data-bind="template: { name: 'tab-content-6'}"></div>
                               </div>
                           </div>
                       </div> 
@@ -70,13 +70,13 @@
                         item: {selectable: itemOnly},
                         selection: selectedItem}"> 
                         <ul>
-                                <li id="overview"><a href="#">Overview</a>
-                                      <ul>
-                                          <!-- ko foreach: dataTabSource -->
-                                            <li><a href="#"><span data-bind="text:name"></span></a></li>
-                                           <!--/ko-->
-                                      </ul>
-                                  </li>
+                            <li id="overview"><a href="#">Overview</a>
+                                <ul>
+                                    <!-- ko foreach: dataTabSource -->
+                                      <li><a class="alert" data-bind='click: $parent.selectedTab'><span data-bind="text:name"></a></li>
+                                     <!--/ko-->
+                                </ul>
+                              </li>
                         </ul>
                     </div>
 
@@ -85,24 +85,25 @@
               </div>
               <div class="oj-row">
                 <h2><span data-bind="css: iconClass"></span><span class="labor" data-bind="text: sectionName"></span></h2>  
-                <div id="tabs-1">
-                   <div data-bind="template: { name: 'generic_template'}"></div>
-               </div>
-               <div id="tabs-2">
-                   <div data-bind="template: { name: 'generic_template'}"></div>
-               </div>
-               <div id="tabs-3">
-                   <div data-bind="template: { name: 'generic_template'}"></div>
-               </div>
-               <div id="tabs-4">
-                   <div data-bind="template: { name: 'generic_template'}"></div>
-               </div>
-               <div id="tabs-5">
-                   <div data-bind="template: { name: 'generic_template'}"></div>
-               </div>
-               <div id="tabs-6">
-                   <div data-bind="template: { name: 'generic_template'}"></div>
-               </div>  
+                <!-- tab contents -->
+                    <div id="tabs-1">
+                           <div data-bind="template: { name: 'tab-overview'}"></div>
+                     </div>
+                     <div id="tabs-2">
+                           <div data-bind="template: { name: 'tab-content-2'}"></div>
+                     </div>
+                     <div id="tabs-3">
+                           <div data-bind="template: { name: 'tab-content-3'}"></div>
+                     </div>
+                     <div id="tabs-4">
+                           <div data-bind="template: { name: 'tab-content-4'}"></div>
+                     </div>
+                    <div id="tabs-5">
+                           <div data-bind="template: { name: 'tab-content-5'}"></div>
+                    </div>
+                    <div id="tabs-6">
+                           <div data-bind="template: { name: 'tab-content-6'}"></div>
+                    </div>
           </div>
         </script>      
         <div data-bind="template: {name: medium() ? 'med_lg_xl_template' : 'sm_template'}"></div>
@@ -121,7 +122,65 @@
 
 </script>
 
+<script type="text/html" id="tab-overview">
+<div data-bind="with: selectedTab">
+    <h1 data-bind="text: name"></h1>
+    <div class="tbd">
+    Content TBD...Dynamic Template 1 Loaded
+    </div>
+</div>
 
+</script>
+
+<script type="text/html" id="tab-content-2">
+<div data-bind="with: selectedTab">
+    <h1 data-bind="text: name"></h1>
+    <div class="tbd">
+    Content TBD...Dynamic Template 2 Loaded
+    </div>
+</div>
+
+</script>
+
+<script type="text/html" id="tab-content-3">
+<div data-bind="with: selectedTab">
+    <h1 data-bind="text: name"></h1>
+    <div class="tbd">
+    Content TBD...Dynamic Template 3 Loaded
+    </div>
+</div>
+
+</script>
+
+<script type="text/html" id="tab-content-4">
+<div data-bind="with: selectedTab">
+    <h1 data-bind="text: name"></h1>
+    <div class="tbd">
+    Content TBD...Dynamic Template 4 Loaded
+    </div>
+</div>
+
+</script>
+
+<script type="text/html" id="tab-content-5">
+<div data-bind="with: selectedTab">
+    <h1 data-bind="text: name"></h1>
+    <div class="tbd">
+    Content TBD...Dynamic Template 5 Loaded
+    </div>
+</div>
+
+</script>
+
+<script type="text/html" id="tab-content-6">
+<div data-bind="with: selectedTab">
+    <h1 data-bind="text: name"></h1>
+    <div class="tbd">
+    Content TBD...Dynamic Template 6 Loaded
+    </div>
+</div>
+
+</script>
 <script type="text/html" id="app_sidenav_template">
     <li>
         <a href="#">
