--- a/OracleJETApplication/templates/header.tmpl.html
+++ b/OracleJETApplication/templates/header.tmpl.html
@@ -64,7 +64,7 @@
 
                                 <!-- This is how to add a separator to the toolbar.  
                                      Be sure to include the role and aria-orientation as shown to make it accessible.  -->
-                                <span role="separator" aria-orientation="vertical" class="oj-toolbar-separator demo-appheader-toolbar-separator"></span>
+<!--                                <span role="separator" aria-orientation="vertical" class="oj-toolbar-separator demo-appheader-toolbar-separator"></span>-->
 
                                 <!-- This pulldown menu is used for wider screens -->
                                 <button id="menuButton"
