--- a/OracleJETApplication/templates/performance.tmpl.html
+++ b/OracleJETApplication/templates/performance.tmpl.html
@@ -1,4 +1,4 @@
-<h1>Performance Content</h1>
+<h1>Performance Content John cho</h1>
 <div>
     Content in this area will be the primary content for the Performance page. It will stay above the Complementary content as the viewport is made smaller.  
     At the smallest view port size, it will be in between the Navigation content and the Complementary content.
