--- a/OracleJETApplication/templates/icare.tmpl.html
+++ b/OracleJETApplication/templates/icare.tmpl.html
@@ -1,28 +1,49 @@
-<!--<h1>Icare Content Changed Area</h1>
+<!-- large template -->
+<script type="text/html" id="med_lg_xl_template">
+     <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
+            <!-- tab bar -->
+            <ul>
+                <!-- ko foreach: dataTabSource -->
+                <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
+                <!-- /ko -->
+            </ul>
 
-<h2 data-bind="text: $root.router.currentValue"></h2>
+            <!-- tab contents -->
+            <!-- ko foreach: dataTabSource -->
+            <div data-bind="attr: {id: 'tab-' + id}">
+                <div data-bind="ojModule: {
+                        name: 'icare/' + fileName,
+                        viewName: 'icare/' + fileName + '-large'}">
+                </div>
+            </div>
+            <!-- /ko-->
+        </div>
+</script>
+<!-- small template -->
+<script type="text/html" id="sm_template">
+    <div id="tabs-container">
+        <div id="selected-title" data-bind="click: hideSections">
+            <a href="#" data-bind="text:currentSection"></a>
+        </div>
+        <div id="tabs" data-bind="ojComponent:{component: 'ojTabs',  orientation: 'vertical'}">
+            <!-- tab bar -->
+            <ul class="vertical-tabs" data-bind="visible: sectionsState">
+                <!-- ko foreach: dataTabSource -->
+                <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
+                <!-- /ko -->
+            </ul>
 
-<div data-bind="text: something"></div>-->
-
-<div id="tabs-container">
-    Test 1
-  <div id="selected-title" data-bind="click: hideSections"><a href="#" data-bind="text:currentSection"></a></div>
-  <div id="tabs" data-bind="ojComponent:{component: 'ojTabs',  orientation: 'vertical'}">
-    <!-- tab bar -->
-    <ul class="vertical-tabs" data-bind="visible: sectionsState">
-        <!-- ko foreach: dataTabSource -->
-        <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
-        <!-- /ko -->
-    </ul>
-
-    <!-- tab contents -->
-    <!-- ko foreach: dataTabSource -->
-    <div data-bind="attr: {id: 'tab-' + id}">
-        <div data-bind="ojModule: {
-            name: 'icare/' + id, 
-            viewName: 'icare/' + id}">
+            <!-- tab contents -->
+            <!-- ko foreach: dataTabSource -->
+            <div data-bind="attr: {id: 'tab-' + id}">
+                <div data-bind="ojModule: {
+                        name: 'icare/' + fileName,
+                        viewName: 'icare/' + fileName + '-small'}">
+                </div>
+            </div>
+            <!-- /ko-->
         </div>
     </div>
-    <!-- /ko-->
-  </div>
-</div>
+</script>
+
+<div data-bind="template: {name: $root.medium() ? 'med_lg_xl_template' : 'sm_template'}"></div>
