--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -26,8 +26,8 @@
         <script type="text/html" id="med_lg_xl_template">
 
               <div class="oj-row">
-                  <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12">
-                  <h1><span data-bind="css: iconClass"></span><span data-bind="text: sectionName"></span></h1>
+                  <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 sectionheader">
+                      <h1><span data-bind="css: iconClass"></span><span data-bind="text: sectionName" class="sectionName"></span></h1>
                   </div>
                   <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12">
                           <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
