--- a/OracleJETApplication/templates/people.tmpl.html
+++ b/OracleJETApplication/templates/people.tmpl.html
@@ -130,7 +130,7 @@
                             <div class="oj-md-only-hide oj-lg-4 oj-xl-4 right">
                                 <div class="resultWrapper"></div>
                             </div><!-- End of right Column -->
-                            <div class="oj-col">
+                            <div class="oj-col oj-lg-hide oj-xl-hide">
                                 <div class="resultWrapper"></div>
                             </div>
                             <div class="submitWrapper left">
