--- a/OracleJETApplication/templates/header.tmpl.html
+++ b/OracleJETApplication/templates/header.tmpl.html
@@ -86,7 +86,7 @@
     <li>
         <a href="#">
             <span data-bind="css: $data['iconClass']"></span>
-            <span data-bind="text: $data['name']"></span>
+            <span data-bind="text: $data['name']" class="oj-sm-only-hide oj-lg-hide"></span>
    
         </a>
     </li>    
