--- a/OracleJETApplication/templates/icare.tmpl.html
+++ b/OracleJETApplication/templates/icare.tmpl.html
@@ -1,9 +1,12 @@
 <!-- large template -->
 <script type="text/html" id="med_lg_xl_template">
-    <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 sectionheader">
-
-        <span data-bind="css: iconClass"></span><h1 data-bind="text: $root.router.currentValue"></h1>
-<!--      <h1><span data-bind="css: iconClass"></span><span data-bind="text: sectionName" class="sectionName"></span></h1>-->
+    <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
+        <h1 style="display: inline-block;">
+            <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: pageHeading"></span>
+        </h1>
+        <span data-bind="text: pageSubNavigation"></span>
+        <a href="#">change</a>
     </div>
     <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
         <!-- tab bar -->
